Fix spacing on show results

--- a/app/assets/stylesheets/business_search.scss
+++ b/app/assets/stylesheets/business_search.scss
@@ -19,16 +19,12 @@
     flex-direction: row;
   }
   &-index-box {
-    width: 100%;
-    // height: auto;
-    max-width: 960px;
-    display: flex;
-    margin: auto;
-    flex-direction: column;
+    width: 70%;
+    padding-right: 30px;
   }
 
   &-item {
-    padding-top: 30px;
+    padding: 30px 0 15px 0;
     font-size: 16px;
     border-bottom: 1px solid #ccc;
     display: flex;
@@ -44,32 +40,39 @@
     height: 100%;
   }
 
+  &-index-item > * {
+    padding-bottom: 5px;
+  }
+
   &-pic {
     font-size: 16px;
     font-weight: bold;
     color: #0073bb;
   }
 
-  &-search-left {
-    display: block;
+  &-left {
     height: auto;
-    width: 40%
+    width: 67%
 
   }
-  &-search-right {
-    height: auto;
-    display: block;
-    min-width: 150px;
-    width: 60%;
+
+  &-right {
+    width: 33%;
+  }
+
+  &-right > * {
+    padding-bottom: 5px;
   }
 }
 
 // map
 .business__search {
   &-map-container {
-    width: 25%;
-    height: 100%;
-    border: 1px solid #ccc;
+    width: 30%;
   }
 
+  &-map {
+    width: 100%;
+    height: 279px;
+  }
 }
